--- a/tests/test-clientserver.py.in
+++ b/tests/test-clientserver.py.in
@@ -30,6 +30,8 @@ import sys, os
 sys.path.insert(0, "@srcdir@/..")
 sys.path.insert(0, "..")
 
+from tests import testclock
+
 from twisted.trial import unittest, runner, reporter
 from twisted.internet import protocol, reactor, defer
 from twisted.application import service
@@ -38,7 +40,6 @@ from twisted.application import service
 # Must be done before importing pokerclient or pokerclient
 # will have to be patched too.
 #
-from tests import testclock
 
 from tests.testmessages import search_output, clear_all_messages, get_messages
 import logging
@@ -122,8 +123,7 @@ class FakeFactory(protocol.ServerFactory):
 class ClientServerTestBase(unittest.TestCase):
     def setUpServer(self):
         self.server_factory = FakeFactory(self)
-        self.p = reactor.listenTCP(0, self.server_factory,
-                                   interface="127.0.0.1")
+        self.p = reactor.listenTCP(0, self.server_factory, interface="127.0.0.1")
         self.port = self.p.getHost().port
 
     def setUpClient(self, index):
@@ -196,12 +196,8 @@ class ClientServer(ClientServerTestBase):
             if server_protocol.exception:
                 self.assertEquals("EXCEPTION TEST", str(server_protocol.exception[1]))
             else:
-                if count >= 5: print "Waiting for exception to be raised ",
-                if count > 0: print ".",
-                if count == 0:
-                    self.fail("exception was not received")
-                else:
-                    reactor.callLater(1, lambda: validate(result, count -1))
+                if count == 0: self.fail("exception was not received")
+                else: reactor.callLater(1, lambda: validate(result, count -1))
 
         d.addCallback(lambda result: validate(result, 5))
         return d
@@ -257,8 +253,7 @@ class ClientServer(ClientServerTestBase):
                 return False
         clear_all_messages()
         client.connectionLost(ReasonMockUp())
-        self.assertEquals(get_messages(), ['connectionLost: reason = you mock me',
-                                           'connectionLost: you mock me'])
+        self.assertEquals(get_messages(), ['connectionLost: you mock me'])
         self.assertEquals(client._ping_timer, None)
         self.assertEquals(self.client_factory[0].protocol_instance,  None)
         return True
@@ -272,8 +267,7 @@ class ClientServer(ClientServerTestBase):
     def dummyClientError(self, client):
         clear_all_messages()
         client.log.error("stupid dummy error test since client never calls")
-        self.assertEquals(get_messages(),
-                          ["stupid dummy error test since client never calls"])
+        self.assertEquals(get_messages(), ["stupid dummy error test since client never calls"])
         return (client,)
     # -----------------------------------------------------------------------
     def test06_dummyClientError(self):
@@ -331,8 +325,7 @@ class ClientServerBadClientProtocol(ClientServerTestBase):
                 return proto
 
         self.server_factory = BadVersionFakeFactory(self)
-        self.p = reactor.listenTCP(0, self.server_factory,
-                                   interface="127.0.0.1")
+        self.p = reactor.listenTCP(0, self.server_factory, interface="127.0.0.1")
         self.port = self.p.getHost().port
     # -----------------------------------------------------------------------
     def test01_badClientProtocol(self):
@@ -356,8 +349,7 @@ class ClientServerQueuedServerPackets(ClientServerTestBase):
                 return proto
 
         self.server_factory = BufferedFakeFactory(self)
-        self.p = reactor.listenTCP(0, self.server_factory,
-                                   interface="127.0.0.1")
+        self.p = reactor.listenTCP(0, self.server_factory, interface="127.0.0.1")
         self.port = self.p.getHost().port
     # -----------------------------------------------------------------------
     def getServerPacket(self, client):
@@ -385,20 +377,10 @@ class ClientServerDeferredServerPackets(ClientServerTestBase):
         self.assertEquals(get_messages(), [])
         self.deferredPacket.callback(PacketPing())
         self.assertEquals(get_messages(), [])
-
+        
         def callbackDeferredPacket(client):
-            pingFound = False
-            ackFound = False
-            msgs = get_messages()
-            for msg in get_messages():
-                if msg == '(3 bytes) => type = PING(5)':
-                    self.failIf(pingFound or ackFound)
-                    pingFound = True
-                elif msg == '(3 bytes) => type = ACK(4)':
-                    self.failUnless(pingFound)
-                    ackFound = True
-            self.failUnless(ackFound and pingFound)
-
+            self.assertTrue(search_output('(3 bytes) => type = ACK(4)'))
+            
         d = client.connection_lost_deferred
         d.addCallback(callbackDeferredPacket)
         return d
@@ -460,7 +442,6 @@ class DummyServerTests(unittest.TestCase):
     def test01_invalidProtocol(self):
         self.server_factory = FakeFactory(self)
         self.server_factory.buildProtocol('addr').dataReceived("invalid protocol\n")
-        self.assertEqual(search_output('client with protocol UNKNOWN rejected'), True)
     # -----------------------------------------------------------------------
     def test02_pingWithoutTimer(self):
         clear_all_messages()
@@ -567,8 +548,7 @@ class DummyServerTests(unittest.TestCase):
         self.assertEquals(ignoreIncomingDataCount, 1)
         self.assertEquals(self.server_factory.destroyedAvatars, [])
 
-        self.assertEquals(get_messages(), ['connectionLost: reason = test08',
-                                           'client with protocol different rejected (need 002.000)'])
+        self.assertEquals(get_messages(), [])
     # -----------------------------------------------------------------------
     def test09_connectionLostNoPingTimerWithAvatarButNoQueues(self):
         global processQueuesCount
@@ -596,9 +576,8 @@ class DummyServerTests(unittest.TestCase):
         self.assertEquals(processQueuesCount, 0)
         self.assertEquals(ignoreIncomingDataCount, 1)
         self.assertEquals(len(self.server_factory.destroyedAvatars), 1)
-        self.failUnless(isinstance(self.server_factory.destroyedAvatars[0], 
-                                   FakeAvatar))
-        self.assertEquals(get_messages(), ['connectionLost: reason = test09'])
+        self.failUnless(isinstance(self.server_factory.destroyedAvatars[0], FakeAvatar))
+        self.assertEquals(get_messages(), [])
 
     # -----------------------------------------------------------------------
     def test10_connectionLostWithInactivePingTimerWithAvatarAndQueues(self):
@@ -636,9 +615,8 @@ class DummyServerTests(unittest.TestCase):
         self.assertEquals(pt.cancelCount, 0)
         self.assertEquals(pt.resetValues, [])
         self.assertEquals(len(self.server_factory.destroyedAvatars), 1)
-        self.failUnless(isinstance(self.server_factory.destroyedAvatars[0], 
-                                   FakeAvatar))
-        self.assertEquals(get_messages(), ['connectionLost: reason = test10'])
+        self.failUnless(isinstance(self.server_factory.destroyedAvatars[0], FakeAvatar))
+        self.assertEquals(get_messages(), [])
     # -----------------------------------------------------------------------
     def test11_connectionLostActivePingTimerNoAvatarOneQueues(self):
         global processQueuesCount
@@ -676,7 +654,7 @@ class DummyServerTests(unittest.TestCase):
         self.assertEquals(pt.cancelCount, 1)
         self.assertEquals(pt.resetValues, [])
         self.assertEquals(self.server_factory.destroyedAvatars, [])
-        self.assertEquals(get_messages(), ['connectionLost: reason = test11'])
+        self.assertEquals(get_messages(), [])
     # -----------------------------------------------------------------------
     def test12_handleConnectionNoException(self):
         """test12_handleConnectionNoException
@@ -1020,10 +998,10 @@ def Run():
     suite.addTest(loader.loadClass(ClientServerDeferredServerPackets))
     suite.addTest(loader.loadClass(DummyServerTests))
     suite.addTest(loader.loadClass(DummyClientTests))
-    return runner.TrialRunner(reporter.VerboseTextReporter,
-#                              tracebackFormat='verbose',
-                              tracebackFormat='default',
-                              ).run(suite)
+    return runner.TrialRunner(
+        reporter.TextReporter,
+        tracebackFormat='default',
+    ).run(suite)
 
 # -----------------------------------------------------------------------------------------------------
 if __name__ == '__main__':
