--- a/tests/test-leak-reference.py.in
+++ b/tests/test-leak-reference.py.in
@@ -67,7 +67,7 @@ def Run():
       suite = loader.suiteFactory()
       suite.addTest(loader.loadClass(LeakReferenceTestCase))
       return runner.TrialRunner(
-            reporter.VerboseTextReporter,
+            reporter.TextReporter,
             tracebackFormat='default',
 #            logfile = '-',
             ).run(suite)
