--- a/tests/test-pokergameclient.py.in
+++ b/tests/test-pokergameclient.py.in
@@ -25,9 +25,7 @@ sys.path.insert(0, "..")
 
 from twisted.trial import unittest, runner, reporter
 
-from tests.testmessages import silence_all_messages
 verbose = int(os.environ.get('VERBOSE_T', '-1'))
-if verbose < 0: silence_all_messages()
 
 from pokernetwork.pokergameclient import PokerNetworkGameClient
 
@@ -81,9 +79,9 @@ def Run():
     suite = loader.suiteFactory()
     suite.addTest(loader.loadClass(PokerNetworkGameClientTestCase))
     return runner.TrialRunner(
-        reporter.VerboseTextReporter,
+        reporter.TextReporter,
         tracebackFormat='default',
-        ).run(suite)
+    ).run(suite)
 
 # ----------------------------------------------------------------
 if __name__ == '__main__':
