--- a/tests/test-pokersite.py.in
+++ b/tests/test-pokersite.py.in
@@ -34,9 +34,7 @@ from twisted.python import failure
 import twisted.internet.base
 twisted.internet.base.DelayedCall.debug = True
 
-from tests.testmessages import silence_all_messages
 verbose = int(os.environ.get('VERBOSE_T', '-1'))
-if verbose < 0: silence_all_messages()
 
 from tests import testclock
 
@@ -47,12 +45,17 @@ from pokernetwork import pokeravatar
 from pokernetwork.pokertable import PokerAvatarCollection
 from pokernetwork.pokerpackets import *
 
+class PokerAuthMockup:
+    def GetLevel(self,*a,**kw):
+        return 0
+    
 class PokerServiceMockup:
 
       def __init__(self):
             self.verbose = 6
             self.avatar_collection = PokerAvatarCollection()
             self.dirs = []
+            self.poker_auth = PokerAuthMockup()
 
       def getPlayerInfo(self, serial):
             packet = PacketPokerPlayerInfo(serial = serial)
@@ -99,19 +102,22 @@ class HelpersTestCase(unittest.TestCase):
             self.assertEqual([u'b', {u'a': u'c'}, (u'd',), 1], pokersite.toutf8(['b', {'a': 'c'}, ('d',), 1]))
                              
       def test_args2packets(self):
-            self.assertEqual([PacketPing()], pokersite.args2packets([{'type':'PacketPing'}]))
-            packets = pokersite.args2packets([{'type':'BadPacket'}])
-            self.assertSubstring('Unable to instantiate', packets[0].message)
-            packets = pokersite.args2packets([{'type':'0'}])
-            self.assertSubstring('Invalid type', packets[0].message)
+            self.assertEqual([PacketPing()], list(pokersite.args2packets([{'type':'PacketPing'}])))
+            packet = pokersite.args2packets([{'type':'BadPacket'}]).next()
+            self.assertSubstring('Invalid type name BadPacket', packet.message)
+            packet = pokersite.args2packets([{'type':'-1'}]).next()
+            self.assertSubstring('Invalid type', packet.message)
 
       def test_packets2maps(self):
-            self.assertEqual([{'type': 'PacketPing'}], pokersite.packets2maps([PacketPing()]))
-            self.assertEqual([{'packets': [{'type': 'PacketPing'}], 'type': 'PacketList'}], pokersite.packets2maps([PacketList(packets = [PacketPing()])]))
+            self.assertEqual([{'type': 'PacketPing'}], list(pokersite.packets2maps([PacketPing()])))
+            self.assertEqual(
+                [{'packets': [{'type': 'PacketPing'}], 'type': 'PacketList'}], 
+                list(pokersite.packets2maps([PacketList(packets = [PacketPing()])]))
+            )
             packet = Packet()
             packet.message = "MESSAGE"
             packet.what = { 0: 1 }
-            self.assertEqual([{'message': 'MESSAGE', 'type': 'Packet', 'what': {'X0': 1}}], pokersite.packets2maps([packet]))
+            self.assertEqual([{'message': 'MESSAGE', 'type': 'Packet', 'what': {'X0': 1}}], list(pokersite.packets2maps([packet])))
 
 class PokerSiteBase(unittest.TestCase):
 
@@ -127,6 +133,7 @@ class PokerSiteBase(unittest.TestCase):
             pokermemcache.memcache_expiration_singleton.clear()
             self.service = PokerServiceMockup()
             self.site = pokersite.PokerSite(self.settings, pokersite.PokerResource(self.service))
+            self.site.memcache = pokermemcache.MemcacheMockup.Client([])
 
       def tearDown(self):
             self.site.stopFactory()
@@ -323,24 +330,6 @@ class PokerResourceTestCase(PokerSiteBase):
             r.requestReceived('GET', '/', '')
             return d
 
-      def test08_error_prefix(self):
-            r = pokersite.Request(self.Channel(self.site), True)
-            r.site = r.channel.site
-            r.received_headers['x-forwarded-for'] = '1.2.3.4'
-            d = defer.Deferred()
-            d.addCallback(lambda error: self.assertSubstring('1.2.3.4', error))
-            r.site.resource.error = d.callback
-            input = '{"type": "PacketPing"}'
-            r.gotLength(len(input))
-            r.handleContentChunk(input)
-            r.queued = 0
-            error_pattern = 'UNLIKELY'
-            def handlePacketLogic(packet):
-                  raise UserWarning, error_pattern
-            r.args = { 'uid': [ 'uid' ], 'auth': ['auth'] }
-            r.getSession().avatar.handlePacketLogic = handlePacketLogic
-            r.requestReceived('GET', '/?uid=uid&auth=auth', '')
-            return d
 
 class PokerTourneyStartTestCase(unittest.TestCase):
 
@@ -374,6 +363,7 @@ class PokerTourneyStartTestCase(unittest.TestCase):
       def test01_render(self):            
             r = pokersite.Request(self.Channel(self.site), True)
             r.site = r.channel.site
+            r.site.memcache = pokermemcache.memcache.Client([])
             input = ''
             r.gotLength(len(input))
             r.handleContentChunk(input)
@@ -407,6 +397,7 @@ class PokerImageUploadTestCase(unittest.TestCase):
             pokermemcache.memcache_expiration_singleton.clear()
             self.service = PokerServiceMockup()
             self.site = pokersite.PokerSite(self.settings, pokersite.PokerImageUpload(self.service))
+            self.site.memcache = pokermemcache.MemcacheMockup.Client([])
             self.image_data = "image data"
             def parse_multipart_mockup(content, dict):
                   return {'filename':[self.image_data]}
@@ -495,6 +486,7 @@ class PokerAvatarResourceTestCase(unittest.TestCase):
             pokermemcache.memcache = pokermemcache.MemcacheMockup
             self.service = PokerServiceMockup()
             self.site = pokersite.PokerSite(self.settings, pokersite.PokerAvatarResource(self.service))
+            self.site.memcache = pokermemcache.memcache.Client([])
 
       def test01_render(self):
             data = 'image data'
@@ -550,6 +542,7 @@ class FilterTestCase(unittest.TestCase):
             pokermemcache.memcache = pokermemcache.MemcacheMockup
             self.service = PokerServiceMockup()
             self.site = pokersite.PokerSite(self.settings, pokersite.PokerResource(self.service))
+            self.site.memcache = pokermemcache.MemcacheMockup.Client([])
 
       class Transport:
             def getPeer(self):
@@ -613,20 +606,7 @@ class FilterErrorTestCase(unittest.TestCase):
             d.addBoth(finish)
             r.requestReceived('GET', '/', '')
             return d
-
-      def test02_error_prefix(self):
-            r = pokersite.Request(self.Channel(self.site), True)
-            r.site = r.channel.site
-            r.received_headers['x-forwarded-for'] = '1.2.3.4'
-            d = defer.Deferred()            
-            d.addCallback(lambda error: self.assertSubstring('1.2.3.4', error))
-            r.site.resource.error = d.callback
-            input = '{"type": "PacketPing"}'
-            r.gotLength(len(input))
-            r.handleContentChunk(input)            
-            r.requestReceived('GET', '/', '')
-            return d
-
+        
 class FilterFinishTestCase(unittest.TestCase):
 
       def setUp(self):
@@ -789,7 +769,8 @@ class PokerSiteTestCase(PokerSiteBase):
             settings.loadFromString(settings_xml)
             service = PokerServiceMockup()
             site = pokersite.PokerSite(settings, pokersite.PokerResource(service))
-            self.assertEqual([ '127.0.0.1:11211' ], [str(s) for s in site.memcache.servers])
+            site.memcache = pokermemcache.MemcacheMockup.Client(['127.0.0.1:11211'])
+            self.assertEqual(['127.0.0.1:11211'], [str(s) for s in site.memcache.servers])
             self.assertEqual(60, site.sessionFactory.sessionTimeout)
             self.assertEqual(120, site.cookieTimeout)
 
@@ -798,6 +779,7 @@ class PokerSiteTestCase(PokerSiteBase):
             sessionCheckTime = pokersite.PokerSite.sessionCheckTime
             service = PokerServiceMockup()
             site = pokersite.PokerSite(self.settings, pokersite.PokerResource(service))
+            site.memcache = pokermemcache.MemcacheMockup.Client([])
             self.assertEqual([ ], site.memcache.servers)
             self.assertEqual(sessionTimeout, site.sessionFactory.sessionTimeout)
 
@@ -905,10 +887,8 @@ class PokerSiteTestCase(PokerSiteBase):
             #
             # logout
             #
-            session.memcache_serial = serial # would be set by getSession()
-            session.avatar.user.serial = 0
-            self.site.updateSession(session)
-            self.assertEquals(0, int(self.site.memcache.get(session.auth)))
+            self.site.logoutSession(session)
+            self.assertEquals(None, self.site.memcache.get(session.auth))
 
       def test04_updateSession_inconsistent_serial(self):
             """
@@ -932,9 +912,9 @@ class PokerSiteTestCase(PokerSiteBase):
             session.avatar.user.serial = new_serial
             self.site.updateSession(session)
             self.assertEquals(new_serial, int(self.site.memcache.get(session.auth)))
-            self.assertEquals(session.memcache_serial, new_serial)
 
       def test05_startFactory(self):
+            self.site.resource.service.memcache = self.site.memcache
             self.site.startFactory()
             self.assertEqual(False, hasattr(self.site, "logFile"))
 
@@ -956,10 +936,6 @@ class PokerSiteTestCase(PokerSiteBase):
             self.assertRaises(Exception, self.site.getSession, unicode(session.uid), session.auth)
             self.assertRaises(Exception, self.site.getSession, session.uid, unicode(session.auth))
 
-      def test09_error_coverage(self):
-            self.site.message = lambda text: self.assertSubstring("*ERROR*", text)
-            self.site.error('foo')
-
       def test10_persistSession(self):
             """
             the session expires after persistSession, unless there are tables
@@ -972,7 +948,7 @@ class PokerSiteTestCase(PokerSiteBase):
             settings.loadFromString(settings_xml)
             service = PokerServiceMockup()
             site = pokersite.PokerSite(settings, pokersite.PokerResource(service))
-
+            site.memcache = pokermemcache.memcache.Client([])
             session = self.site.makeSession('uid', 'auth', False)
             session.avatar.tables[1] = 'table'
             self.assertEquals(True, site.persistSession(session))
@@ -996,6 +972,7 @@ class PokerSiteTestCase(PokerSiteBase):
             settings.loadFromString(settings_xml)
             service = PokerServiceMockup()
             site = pokersite.PokerSite(settings, pokersite.PokerResource(service))
+            site.memcache = pokermemcache.memcache.Client([])
             
             session = self.site.makeSession('uid', 'auth', False)
             session.avatar.tables = []
@@ -1034,9 +1011,9 @@ def Run():
     suite.addTest(loader.loadClass(HelpersTestCase))
     suite.addTest(loader.loadClass(PokerTourneyStartTestCase))
     return runner.TrialRunner(
-        reporter.VerboseTextReporter,
+        reporter.TextReporter,
         tracebackFormat='default',
-        ).run(suite)
+    ).run(suite)
 
 if __name__ == '__main__':
     if Run().wasSuccessful():
