--- a/tests/test-sessionproxyfilter.py.in
+++ b/tests/test-sessionproxyfilter.py.in
@@ -24,7 +24,7 @@ import sys, os
 sys.path.insert(0, "@srcdir@/..")
 sys.path.insert(0, "..")
 
-import simplejson
+import simplejson as json
 
 from twisted.trial import unittest, runner, reporter
 from twisted.internet import defer, reactor
@@ -38,7 +38,6 @@ from twisted.web import client, http
 
 from tests import testmessages
 verbose = int(os.environ.get('VERBOSE_T', '-1'))
-if verbose < 0: testmessages.silence_all_messages()
 
 from tests import testclock
 
@@ -101,164 +100,174 @@ settings_xml_proxy = """<?xml version="1.0" encoding="ISO-8859-1"?>
 </server>
 """
 class SessionProxyFilterTestCase(unittest.TestCase):
-      def destroyDb(self, arg = None):
-            if len("@MYSQL_TEST_DBROOT_PASSWORD@") > 0:
-                  os.system("@MYSQL@ -u @MYSQL_TEST_DBROOT@ --password='@MYSQL_TEST_DBROOT_PASSWORD@' -e 'DROP DATABASE IF EXISTS pokernetworktest'")
-            else:
-                  os.system("@MYSQL@ -u @MYSQL_TEST_DBROOT@ -e 'DROP DATABASE IF EXISTS pokernetworktest'")
-      # --------------------------------------------------------------
-      def initServer(self):
-            settings = pokernetworkconfig.Config([])
-            settings.loadFromString(settings_xml_server)
-            self.server_service = pokerservice.PokerService(settings)
-            self.server_service.disconnectAll = lambda: True
-            self.server_service.startService()
-            self.server_site = pokersite.PokerSite(settings, pokerservice.PokerRestTree(self.server_service))
-            self.server_port = reactor.listenTCP(19482, self.server_site, interface="127.0.0.1")
-      # --------------------------------------------------------------
-      def initExplain(self):
-            settings = pokernetworkconfig.Config([])
-            settings.loadFromString(settings_xml_explain)
-            self.explain_service = pokerservice.PokerService(settings)
-            self.explain_service.disconnectAll = lambda: True
-            self.explain_service.startService()
-            self.explain_site = pokersite.PokerSite(settings, pokerservice.PokerRestTree(self.explain_service))
-            self.explain_port = reactor.listenTCP(19481, self.explain_site, interface="127.0.0.1")            
-      # --------------------------------------------------------------
-      def initProxy(self):
-            settings = pokernetworkconfig.Config([])
-            settings.loadFromString(settings_xml_proxy)
-            self.proxy_service = pokerservice.PokerService(settings)
-            self.proxy_service.disconnectAll = lambda: True
-            self.proxy_service.startService()
-            self.proxy_site = pokersite.PokerSite(settings, pokerservice.PokerRestTree(self.proxy_service))
-            self.proxy_port = reactor.listenTCP(19480, self.proxy_site, interface="127.0.0.1")
-      # --------------------------------------------------------------
-      def setUp(self):
-            testclock._seconds_reset()
-            pokermemcache.memcache = pokermemcache.MemcacheMockup
-            pokermemcache.memcache_singleton = {}
-            pokermemcache.memcache_singleton_expiration = {}
-            pokermemcache.memcache_singleton_log = []
-            self.destroyDb()
-            self.initServer()
-            self.initExplain()
-            self.initProxy()            
-      # --------------------------------------------------------------
-      def tearDownServer(self):
-            self.server_site.stopFactory()
-            d = self.server_service.stopService()
-            d.addCallback(lambda x: self.server_port.stopListening())
-            return d
-      # --------------------------------------------------------------
-      def tearDownExplain(self):
-            self.proxy_site.stopFactory()
-            d = self.explain_service.stopService()
-            d.addCallback(lambda x: self.explain_port.stopListening())
-            return d
-      # --------------------------------------------------------------
-      def tearDownProxy(self):
-            self.proxy_site.stopFactory()
-            d = self.proxy_service.stopService()
-            d.addCallback(lambda x: self.proxy_port.stopListening())
-            return d
-      # --------------------------------------------------------------
-      def tearDown(self):
-            d = defer.DeferredList((
-                  self.tearDownServer(),
-                  self.tearDownExplain(),
-                  self.tearDownProxy()                  
-                  ))
-            d.addCallback(self.destroyDb)
-            d.addCallback(lambda x: reactor.disconnectAll())
-            return d
-      # --------------------------------------------------------------
-      def test01_ping_proxy(self):
-            """
-            Ping to the proxy.
-            """
-            d = client.getPage("http://127.0.0.1:19480/POKER_REST?uid=1bebebaffe&auth=deadbeef",
-                               postdata = '{"type": "PacketPing"}')
-            def checkPing(result):
-                  self.assertEqual('[]', str(result))
-            d.addCallback(checkPing)
-            return d
-      # --------------------------------------------------------------
-      def test02_tableJoin(self):
-            """
-            Join a table thru a proxy.
-            """
-            uid = '1bebebaffe'
-            session = 'deadbeef'
-            resthost = ('127.0.0.1', 19481, '/POKER_REST')
-            self.proxy_site.memcache.set(uid, resthost)
-            d = client.getPage("http://127.0.0.1:19480/POKER_REST?uid=%s&auth=%s" % (uid, session),
-                               postdata = '{"type":"PacketPokerTableJoin","game_id":1}')
-            def checkTable(result):
-                  packets = simplejson.JSONDecoder().decode(result)
-                  self.assertEqual('PacketPokerTable', packets[0]['type'])
-                  self.assertEqual('Table1', packets[0]['name'])
-                  self.assertEqual(resthost, self.proxy_site.memcache.get(uid))
-                  set_uid_log = [v for (l, (k, v, t)) in self.proxy_site.memcache.log if k == uid]
-                  self.assertFalse(('127.0.0.1', 19482, '/POKER_REST') in set_uid_log)
-            d.addCallback(checkTable)
-            return d
-      # --------------------------------------------------------------
-      def test03_tableJoinNoRestHostExplain(self):
-            """
-            Join a table thru an explain server without reshost being set for the session.
-            """
-            uid = '1bebebaffe'
-            session = 'deadbeef'
-            resthost = ('127.0.0.1', 19481, '/POKER_REST')
-            d = client.getPage("http://127.0.0.1:19481/POKER_REST?uid=%s&auth=%s" % (uid, session),
-                               postdata = '{"type":"PacketPokerTableJoin","game_id":1}')
-            def checkTable(result):
-                  packets = simplejson.JSONDecoder().decode(result)
-                  self.assertEqual('PacketPokerTable', packets[0]['type'])
-                  self.assertEqual('Table1', packets[0]['name'])
-                  self.assertEqual(resthost, self.proxy_site.memcache.get(uid))
-                  set_uid_log = [v for (l, (k, v, t)) in self.proxy_site.memcache.log if k == uid]
-                  self.assertFalse(('127.0.0.1', 19482, '/POKER_REST') in set_uid_log)
-            d.addCallback(checkTable)
-            return d
-      # --------------------------------------------------------------
-      def test04_tableJoinNoRestHostProxy(self):
-            """
-            Join a table thru a proxy server without reshost being set for the session.
-            """
-            uid = '1bebebaffe'
-            session = 'deadbeef'
-            resthost = ('127.0.0.1', 19481, '/POKER_REST')
-            d = client.getPage("http://127.0.0.1:19480/POKER_REST?uid=%s&auth=%s" % (uid, session),
-                               postdata = '{"type":"PacketPokerTableJoin","game_id":1}')
-            def checkTable(result):
-                  packets = simplejson.JSONDecoder().decode(result)
-                  self.assertEqual('PacketPokerTable', packets[0]['type'])
-                  self.assertEqual('Table1', packets[0]['name'])
-                  self.assertEqual(resthost, self.proxy_site.memcache.get(uid))
-                  set_uid_log = [v for (l, (k, v, t)) in self.proxy_site.memcache.log if k == uid]
-                  self.assertFalse(('127.0.0.1', 19482, '/POKER_REST') in set_uid_log)
-            d.addCallback(checkTable)
-            return d      
+    def destroyDb(self, arg = None):
+        if len("@MYSQL_TEST_DBROOT_PASSWORD@") > 0:
+            os.system("@MYSQL@ -u @MYSQL_TEST_DBROOT@ --password='@MYSQL_TEST_DBROOT_PASSWORD@' -e 'DROP DATABASE IF EXISTS pokernetworktest'")
+        else:
+            os.system("@MYSQL@ -u @MYSQL_TEST_DBROOT@ -e 'DROP DATABASE IF EXISTS pokernetworktest'")
+    # --------------------------------------------------------------
+    def initServer(self):
+        settings = pokernetworkconfig.Config([])
+        settings.loadFromString(settings_xml_server)
+        self.server_service = pokerservice.PokerService(settings)
+        self.server_service.disconnectAll = lambda: True
+        self.server_service.startService()
+        self.server_site = pokersite.PokerSite(settings, pokerservice.PokerRestTree(self.server_service))
+        self.server_site.memcache = pokermemcache.MemcacheMockup.Client([])
+        self.server_port = reactor.listenTCP(19482, self.server_site, interface="127.0.0.1")
+    # --------------------------------------------------------------
+    def initExplain(self):
+        settings = pokernetworkconfig.Config([])
+        settings.loadFromString(settings_xml_explain)
+        self.explain_service = pokerservice.PokerService(settings)
+        self.explain_service.disconnectAll = lambda: True
+        self.explain_service.startService()
+        self.explain_site = pokersite.PokerSite(settings, pokerservice.PokerRestTree(self.explain_service))
+        self.explain_site.memcache = pokermemcache.MemcacheMockup.Client([])
+        self.explain_port = reactor.listenTCP(19481, self.explain_site, interface="127.0.0.1")        
+    # --------------------------------------------------------------
+    def initProxy(self):
+        settings = pokernetworkconfig.Config([])
+        settings.loadFromString(settings_xml_proxy)
+        self.proxy_service = pokerservice.PokerService(settings)
+        self.proxy_service.disconnectAll = lambda: True
+        self.proxy_service.startService()
+        self.proxy_site = pokersite.PokerSite(settings, pokerservice.PokerRestTree(self.proxy_service))
+        self.proxy_site.memcache = pokermemcache.MemcacheMockup.Client([])
+        self.proxy_port = reactor.listenTCP(19480, self.proxy_site, interface="127.0.0.1")
+    # --------------------------------------------------------------
+    def setUp(self):
+        testclock._seconds_reset()
+        pokermemcache.memcache = pokermemcache.MemcacheMockup
+        pokermemcache.memcache_singleton = {}
+        pokermemcache.memcache_singleton_expiration = {}
+        pokermemcache.memcache_singleton_log = []
+        self.destroyDb()
+        self.initServer()
+        self.initExplain()
+        self.initProxy()        
+    # --------------------------------------------------------------
+    def tearDownServer(self):
+        self.server_site.stopFactory()
+        d = self.server_service.stopService()
+        d.addCallback(lambda x: self.server_port.stopListening())
+        return d
+    # --------------------------------------------------------------
+    def tearDownExplain(self):
+        self.proxy_site.stopFactory()
+        d = self.explain_service.stopService()
+        d.addCallback(lambda x: self.explain_port.stopListening())
+        return d
+    # --------------------------------------------------------------
+    def tearDownProxy(self):
+        self.proxy_site.stopFactory()
+        d = self.proxy_service.stopService()
+        d.addCallback(lambda x: self.proxy_port.stopListening())
+        return d
+    # --------------------------------------------------------------
+    def tearDown(self):
+        d = defer.DeferredList((
+            self.tearDownServer(),
+            self.tearDownExplain(),
+            self.tearDownProxy()            
+        ))
+        d.addCallback(self.destroyDb)
+        d.addCallback(lambda x: reactor.disconnectAll())
+        return d
+    # --------------------------------------------------------------
+    def test01_ping_proxy(self):
+        """
+        Ping to the proxy.
+        """
+        d = client.getPage(
+            "http://127.0.0.1:19480/POKER_REST?uid=1bebebaffe&auth=deadbeef",
+            postdata='{"type": "PacketPing"}'
+        )
+        def checkPing(result):
+            self.assertEqual('[]', str(result))
+        d.addCallback(checkPing)
+        return d
+    # --------------------------------------------------------------
+    def test02_tableJoin(self):
+        """
+        Join a table thru a proxy.
+        """
+        uid = '1bebebaffe'
+        session = 'deadbeef'
+        resthost = ('127.0.0.1', 19481, '/POKER_REST')
+        self.proxy_site.memcache.set(uid, resthost)
+        d = client.getPage(
+            "http://127.0.0.1:19480/POKER_REST?uid=%s&auth=%s" % (uid, session),
+            postdata='{"type":"PacketPokerTableJoin","game_id":1}'
+        )
+        def checkTable(result):
+            packets = json.loads(result)
+            self.assertEqual('PacketPokerTable', packets[0]['type'])
+            self.assertEqual('Table1', packets[0]['name'])
+            self.assertEqual(resthost, self.proxy_site.memcache.get(uid))
+            set_uid_log = [v for (l, (k, v, t)) in self.proxy_site.memcache.log if k == uid]
+            self.assertFalse(('127.0.0.1', 19482, '/POKER_REST') in set_uid_log)
+        d.addCallback(checkTable)
+        return d
+    # --------------------------------------------------------------
+    def test03_tableJoinNoRestHostExplain(self):
+        """
+        Join a table thru an explain server without reshost being set for the session.
+        """
+        uid = '1bebebaffe'
+        session = 'deadbeef'
+        resthost = ('127.0.0.1', 19481, '/POKER_REST')
+        d = client.getPage(
+            "http://127.0.0.1:19481/POKER_REST?uid=%s&auth=%s" % (uid, session),
+            postdata='{"type":"PacketPokerTableJoin","game_id":1}'
+        )
+        def checkTable(result):
+            packets = json.loads(result)
+            self.assertEqual('PacketPokerTable', packets[0]['type'])
+            self.assertEqual('Table1', packets[0]['name'])
+            self.assertEqual(resthost, self.proxy_site.memcache.get(uid))
+            set_uid_log = [v for (l, (k, v, t)) in self.proxy_site.memcache.log if k == uid]
+            self.assertFalse(('127.0.0.1', 19482, '/POKER_REST') in set_uid_log)
+        d.addCallback(checkTable)
+        return d
+    # --------------------------------------------------------------
+    def test04_tableJoinNoRestHostProxy(self):
+        """
+        Join a table thru a proxy server without reshost being set for the session.
+        """
+        uid = '1bebebaffe'
+        session = 'deadbeef'
+        resthost = ('127.0.0.1', 19481, '/POKER_REST')
+        d = client.getPage(
+            "http://127.0.0.1:19480/POKER_REST?uid=%s&auth=%s" % (uid, session),
+            postdata='{"type":"PacketPokerTableJoin","game_id":1}'
+        )
+        def checkTable(result):
+            packets = json.loads(result)
+            self.assertEqual('PacketPokerTable', packets[0]['type'])
+            self.assertEqual('Table1', packets[0]['name'])
+            self.assertEqual(resthost, self.proxy_site.memcache.get(uid))
+            set_uid_log = [v for (l, (k, v, t)) in self.proxy_site.memcache.log if k == uid]
+            self.assertFalse(('127.0.0.1', 19482, '/POKER_REST') in set_uid_log)
+        d.addCallback(checkTable)
+        return d    
 
 ################################################################################
 def Run():
-      loader = runner.TestLoader()
-#      loader.methodPrefix = "test02"
-      suite = loader.suiteFactory()
-      suite.addTest(loader.loadClass(SessionProxyFilterTestCase))
-      return runner.TrialRunner(
-            reporter.VerboseTextReporter,
-            tracebackFormat='default',
-#            logfile = '-',
-            ).run(suite)
+    loader = runner.TestLoader()
+#    loader.methodPrefix = "test02"
+    suite = loader.suiteFactory()
+    suite.addTest(loader.loadClass(SessionProxyFilterTestCase))
+    return runner.TrialRunner(
+        reporter.TextReporter,
+        tracebackFormat='default',
+    ).run(suite)
 
 if __name__ == '__main__':
-      if Run().wasSuccessful():
-            sys.exit(0)
-      else:
-            sys.exit(1)
+    if Run().wasSuccessful():
+        sys.exit(0)
+    else:
+        sys.exit(1)
 ################################################################################
 # Interpreted by emacs
 # Local Variables:
